Fixed alignment of dropdown
Removed the margin on the sides so that it doesn't offset the alignment
of the dropdown body and it's parent element.

--- a/frontend/src/nav.scss
+++ b/frontend/src/nav.scss
@@ -80,7 +80,7 @@ nav.nav {
   z-index: 100;
   cursor: default;
   padding: 5px;
-  margin: 5px;
+  margin-top: 5px;
   background-color: white;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
 
